認証処理の実相

--- a/JRP/src/main/resources/application-development.properties
+++ b/JRP/src/main/resources/application-development.properties
@@ -1,1 +1,2 @@
 frontend.url=http://localhost:5173
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/api/login/oauth2/code/google
