--- a/JRP/src/main/resources/application-production.properties
+++ b/JRP/src/main/resources/application-production.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8080}
+
 frontend.url=https://next-shift-13fc0.web.app
 server.forward-headers-strategy=framework
 spring.security.oauth2.client.registration.google.redirect-uri=https://next-shift-13fc0.web.app/api/login/oauth2/code/google
